--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-torch>=2.0.1
-torchvision>=0.15.2 
-torchaudio>=2.0.2
-diffusers>=0.27.2
-accelerate>=0.28.0
-tensorflow>=2.12.0
-tensorboard>=2.12.0
-opencv-python>=4.9.0.80
-soundfile>=0.12.1
-transformers>=4.39.2
+--extra-index-url https://download.pytorch.org/whl/cu118 
+torch==2.0.1
+torchvision==0.15.2 
+torchaudio==2.0.2
+diffusers==0.27.2
+accelerate==0.28.0
+tensorflow==2.12.0
+tensorboard==2.12.0
+opencv-python==4.9.0.80
+soundfile==0.12.1
+transformers==4.39.2
 
 gdown
 requests
@@ -17,4 +18,4 @@ omegaconf
 ffmpeg-python
 gradio
 spaces
-moviepy
+moviepy==1.0.3
