--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
---extra-index-url https://download.pytorch.org/whl/cu118 
-torch==2.0.1
+--extra-index-url https://download.pytorch.org/whl/cu124
+torch>=2.2.0
 torchvision==0.15.2 
 torchaudio==2.0.2
 diffusers==0.27.2
