--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
---extra-index-url https://download.pytorch.org/whl/cu124
+#--extra-index-url https://download.pytorch.org/whl/cu124
 torch>=2.2.0
 torchvision>=0.15.2 
 torchaudio>=2.0.2
 diffusers==0.27.2
 accelerate>=0.28.0
-tensorflow>=2.12.0
-tensorboard==2.12.0
+tensorflow==2.18.0
+tensorboard==2.18.0
 opencv-python==4.9.0.80
 soundfile==0.12.1
 transformers>=4.39.2
