--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@
 #torchaudio>=2.0.2
 diffusers==0.27.2
 accelerate>=0.28.0
-tensorflow==2.18.0
-tensorboard==2.18.0
+tensorflow==2.16.1
+tensorboard
 opencv-python==4.9.0.80
 soundfile==0.12.1
 transformers>=4.39.2
